--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,10 @@
     "noFallthroughCasesInSwitch": true,
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": true,
+    "baseUrl": "./src/",
+    "paths": {
+      "@/*": ["./*"],
+    },
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
