--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.3.0",
     "@mantine/core": "^7.5.1",
     "@mantine/hooks": "^7.5.1",
+    "@tabler/icons-react": "^2.47.0",
     "@tanstack/react-query": "^5.18.1",
     "@tanstack/react-query-devtools": "^5.18.1",
     "antd": "^5.13.3",
