--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.0",
     "@mantine/core": "^7.5.1",
+    "@mantine/form": "^7.5.2",
     "@mantine/hooks": "^7.5.1",
     "@mantine/modals": "^7.5.2",
     "@tabler/icons-react": "^2.47.0",
